# brace-config

./: .gitignore  Cargo.toml  README.md
crates/brace-config/: Cargo.toml
crates/brace-config/src/: config.rs  lib.rs  macros.rs
crates/brace-config/src/file/: error.rs  json.rs  mod.rs  toml.rs  yaml.rs
crates/brace-config/src/value/: array.rs  de.rs  entry.rs  error.rs  key.rs  mod.rs  ser.rs  table.rs
crates/brace-config/tests/: file.rs  macros.rs
crates/brace-config/tests/assets/: example.json  example.toml  example.yaml
