[package]
name = "brace-config"
version = "0.1.0"
authors = ["Daniel Balcomb <daniel.balcomb@gmail.com>"]
description = "A comprehensive configuration management utility."
repository = "https://github.com/brace-rs/brace-config"
license = "MIT OR Apache-2.0"
edition = "2018"

[features]
default = ["json", "toml", "yaml"]
json = ["serde_json"]
yaml = ["serde_yaml"]

[dependencies]
indexmap = { version = "1.3", features = ["serde-1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"], optional = true }
serde_yaml = { version = "0.8", optional = true }
toml = { version = "0.5", features = ["preserve_order"], optional = true }
